--- a/s1_introduction.tex
+++ b/s1_introduction.tex
@@ -42,7 +42,7 @@ als auch die Funktionalität zur vernünftigen Betrachtung der Bilder bereitstel
 Diese Arbeit spezialisiert sich auf die Interaktion mit dem Teilsystem für das Durchsuchen von radiologischen Aufnahmen in 2D und 3D,
 welche in einem PACS (Picture Archiving and Communication Systems) abgelegt sind.
 Da in einem Krankenhaus täglich große Mengen an Daten durch radiologische Aufnahmen produziert werden, 
-bietet eine effizientes Durchsuchen dieser, die Möglichkeit  sie für Ausbildung und Forschung wieder zu verwenden.
+bietet eine effizientes Durchsuchen dieser, die Möglichkeit Sie für Ausbildung und Forschung wieder zu verwenden.
 %
 Dazu muss das User-Interface die grundlegenden Funktionen eines Betrachtungstools für Röntgen- und Computertomographie-Aufnahmen zur Verfügung stellen:
 \begin{itemize}
