--- a/s2_related-work.tex
+++ b/s2_related-work.tex
@@ -76,7 +76,7 @@ Die Steuerung der Tools zur Interaktion mit dem Volume erfolgt mit der Maus,
 welcher die spezifischen Funktionen zugewiesen werden können. Die jeweils zugewiesene Funktion wird durch das Drücken der Maustaste aktiv.
 \begin{itemize}
 	\item Bei der \textbf{Fensterung} wird mit der X-Achse die Fensterbreite (Kontrast) und mit der Y-Achse das Fensterzentrum (Helligkeit) angepasst.
-	\item \textbf{Positionierung} des Bildes innerhalb der Anzeigefläche. Geht das Bild über die Anzeigefläche hinausm, wird dies durch einen farbige Linie an der jeweiligen Kante signalisiert.
+	\item \textbf{Positionierung} des Bildes innerhalb der Anzeigefläche. Geht das Bild über die Anzeigefläche hinaus, wird dies durch eine farbige Linie an der jeweiligen Kante signalisiert.
 	\item \textbf{Zoom} durch das Verschieben der Maus entlang einer Achse.
 	\item \textbf{Rotation} um das Bildzentrum durch das Verschieben  der Maus entlang der X-Achse.
 	\item \textbf{Navigation} durch das Volume. Die Achse in der die Maus nach einem Klick zuerst verschoben wird, wird für die Navigation gewählt, die andere bleibt inaktiv.
@@ -98,7 +98,7 @@ die Position der Schnittebene in den anderen als farbige Linie angezeigt \cite{o
 \begin{figure}[t]
 	\centering
 	\includegraphics[width=0.8\linewidth]{img/c2_osirix_2d_view_splitscreen.jpg}
-	\caption{Darstellung eines Volumes aus zwei verschiedenen Orientierungen. Die Schnittposition des linken Bildes wird im rechten als grüne Linie dargestellt.}
+	\caption{Darstellung eines Volumes mit zwei verschiedenen Orientierungen. Die Schnittposition des linken Bildes wird im rechten als grüne Linie dargestellt.}
 	\label{fig:osirix_2dView_splitWindow}
 \end{figure}
 
@@ -144,6 +144,4 @@ Die Funktionen zur Interaktion mit den Bilddaten sind bei den beiden erwähnten 
 So zeigt OsiriX beispielsweise an wenn das Bild über das Betrachtungsfenster hinaus geht.
 Osirix hat einige Features wie 3D-Rendering, welche zwar für die Forschung interessant sind, für die medizinische Befundung aber keine größere Rolle spielen.
 Funktionen zum Durchsuchen der Datensätze anhand einer Bild-Query weisen beide Produkte nicht auf.
-
-
 
