--- a/s4_results.tex
+++ b/s4_results.tex
@@ -181,4 +181,33 @@ Wie auch die Webapplikation dient der JavaClient zum Betrachten und Durchsuchen 
 bietet aber weiters noch umfangreiche Tools für die Textsuche und für kolaboratives Arbeiten.
 In diesem Unterkapitel werden Features und die Umsetzung der beiden Anwendung bezüglich des Pflichtenheftes (Siehe Unterkapitel \ref{sec:Pflichtenheft}) verglichen.
 
+\begin{figure}[pt]
+	\centering
+	\includegraphics[width=\linewidth]{img/c4_java_client.jpg}
+	\caption{JavaClient für KRESHMOI}
+	\label{fig:java_client}
+\end{figure}
 
+\subsubsection{Layout}
+\label{sec:ua_Layout}
+Wie die Webapplikation wurde auch der JavaClient in mehrere Komponeten (Betrachter mit Suche, Ergebnissliste und Ergebniss Detailansicht) unterteilt.
+Bei beiden können die Komponenten in dem Fenster unterschiedlich angeordnet und der Platz für die einzelnen Komponenten variiert werden.
+Der JavaClient ist hierbei etwas dynamischer gestalltet da die Komponenten beliebig umpositioniert werden können.
+Weiters gibt es die möglichkeit eine komposition der Komponenten zu speichern.
+Die Webapplikation verfügt über eine Menge von vordefinierten Kompositionen der Komponenten zwischen welchen gewechselt werden kann.
+
+\subsubsection{Betrachter}
+\label{sec:ua_Betrachter}
+Beim Betrachter bieten beide Applikationen ungefähr den selben Funktionsumfang bzw. die selben Tools.
+Ein wesentlicher Unterschied besteht in der Auswahl und Verwendung der Tools.
+Die Webapplikation ist bei der Bedienung den zur zeit in der Medizien und Forschung verwendeten Programmen (Siehe Kapitel \ref{sec:relatedWork}) sehr ähnlich.
+Bei diesen wird der Maus über eine Toolbar eine Aktion zugewiesen welche dann durch die Maustasten und Bewegen der Maus ausgeführt wird.
+Der JavaClient hat ein eigenes Bedienkonzept welches von diesem Schema abweicht.
+Bei diesem erfolgt der Wechsel zwischen den Tools durch die Maustasten, dem Drücken von Tastem am Keyboard und einem Kontextmenu.
+
+\subsubsection{Ergebnissliste}
+\label{sec:ua_Ergebnissliste}
+Die Komponente zur Präsentation der Ergebnisse ist beim JavaClient um einiges Umfangreicher.
+Dieser ermöglicht eine Ansicht der Ergebnisse als Tabelle von Bildern (wie in der Webapplikation) und als Liste welche auch eine Beschreibung und Bewertung der Datensätze enthält.
+Weiters bietet er Funktionen um die Ergebnisse nach verschiedenen Kriterien zu sortieren und die Sucheregbnisse mit einer weiteren Textsuche einzuschränken.
+Der JavaClient präsentiert auch Suchergebnisse aus anderen Resourcen wie zu Beispiel aus einem Radiologie Wiki und ermöglicht eine Betrachtung dieser.
